--- a/styles/styles.css
+++ b/styles/styles.css
@@ -295,13 +295,9 @@ main .panel article {
 
 main .panel article .big-image {
   position: relative;
-  height: 400px;
-}
-
-@media (min-width: 620px) {
-  main .panel article .big-image {
-    height: auto;
-  }
+  height: 534px;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 @media (min-width: 1360px) {
@@ -357,11 +353,34 @@ main .panel article .big-image .controls a img {
           transform: translate(-50%, -50%);
 }
 
-main .panel article .big-image .big-image-content {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+main .panel article .big-image.bg-one {
+  background-image: url("../images/mobile-image-hero-1.jpg");
+}
+
+@media (min-width: 620px) {
+  main .panel article .big-image.bg-one {
+    background-image: url("../images/desktop-image-hero-1.jpg");
+  }
+}
+
+main .panel article .big-image.bg-two {
+  background-image: url("../images/mobile-image-hero-2.jpg");
+}
+
+@media (min-width: 620px) {
+  main .panel article .big-image.bg-two {
+    background-image: url("../images/desktop-image-hero-2.jpg");
+  }
+}
+
+main .panel article .big-image.bg-three {
+  background-image: url("../images/mobile-image-hero-3.jpg");
+}
+
+@media (min-width: 620px) {
+  main .panel article .big-image.bg-three {
+    background-image: url("../images/desktop-image-hero-3.jpg");
+  }
 }
 
 @media (min-width: 640px) {
